Mon Jan 19 18:54:11 2004  Tim Janik  <timj@gtk.org>

	* Makefile.am: generate bsehack.idl from procidl.
	made bse.idl the canonical client-binding API idl file.

	* bsecxxutils.h: provide assert_ptr_derivation().

	* bsecxxvalue.h: use assert_ptr_derivation() in
	g_value_get_object<>() to fix object offset.

	* bsemidireceiver.cc: fix assertion.

	* bseprocidl.cc: skip BseSniffer and BseSnifferType.

	* bsesniffer.cc, bsesniffer.idl: recode process() to handle multiple
	requests per block. queue requests before prepare(). added
	sniffer_get_mix_freq().

	* bsesong.proc:
	* bsetrack.proc: moved sniffer creation from song to track.

Mon Jan 19 15:31:20 2004  Tim Janik  <timj@gtk.org>

	* bseautodoc.c: beautify float output. s/Name/Identifier/ for
	property/channel identifiers. fixed plugin loading.

Fri Jan 16 19:42:30 2004  Tim Janik  <timj@gtk.org>

	* gsldatahandle.[hc]: added support for alaw and ulaw sample formats.
	(wave_format_byte_width): the byte width needs not be deductable from
	the bit-depth (i.e. is different for alaw/ulaw).
	(wave_handle_read): removed conversion cases by means of using
	gsl_conv_to_float() instead.

	* gsldatautils.[hc]: implement alaw/ulaw decoding.

	* gslloader-wav.c: added support for ALAW and ULAW encoded WAV files.

	* gslloader-gslwave.c: started support for additional fields.

	* gslwave.header: document newly supported fields.

Fri Jan 16 17:51:53 2004  Tim Janik  <timj@gtk.org>

	* engine-mplan.txt: fixed typo.

	* gslengine.c: fixed documentation.

	* gslopmaster.c: make needs_reset unconditionally indicate whether a
	module needs a reset() call. check whether a module flagged needs_reset
	has a reset() function before calling it. defer forced resets until
	shortly before process().

	* gslopschedule.c: propagate needs_reset() down a branch similar to
	suspension state. this fixes missing reset()s of voices where both
	a suspend and resume job for a voice fell into the same block boundary.
