@@ -1,3 +1,9 @@
+Mon Jan 19 20:31:28 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* Makefile.am bseprocidl.c: Exclude types which are from bse.idl (and
+	not define from bsehack.idl) automatically, instead of maintaining a
+	type list in bseprocidl (uses sfidl --list-types).
+
 Mon Jan 19 18:54:11 2004  Tim Janik  <timj@gtk.org>
 
 	* Makefile.am: generate bsehack.idl from procidl.
